--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "chai": "^4.2.0",
     "lodash": "^4.17.19",
     "mocha": "^7.2.0",
-    "vitepress": "file:vitepress-0.13.0-marten.tgz"
+    "vitepress": "^0.13.0"
   }
 }
